--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "indexdbwrapper": "^1.0.4",
     "moment": "^2.29.1"
   },
   "devDependencies": {
