--- a/package.json
+++ b/package.json
@@ -1,26 +1,22 @@
 {
-  "name": "hll_static_collect",
+  "name": "@hll/user-local-log",
   "version": "1.0.0",
   "description": "用户行为本地收集",
   "main": "dist/bundle.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "rollup -c -w",
+    "dev": "rollup -c -w",
     "build": "rollup -c"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "indexdbwrapper": "^1.0.4",
-    "moment": "^2.29.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.15.0",
     "@babel/plugin-external-helpers": "^7.14.5",
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/register": "^7.15.3",
-    "html2canvas": "^1.3.2",
     "rollup": "^2.56.3",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
